fixed font size on mobile, added some style fixes

--- a/themes/capu/static/css/main.css
+++ b/themes/capu/static/css/main.css
@@ -1,7 +1,7 @@
 /******************************************************************************/
 /*                               General Style                                */
 /******************************************************************************/
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
 
 article,
 aside,
@@ -18,16 +18,13 @@ section {
 }
 body {
   color: #272727;
-  line-height: 1;
+  line-height: 1.3;
+  font-size: 19px;
   background: 0 0;
-  font-size: 120%;
-  font-family: "Inconsolata", "monospace"
+  font-family: "Fira Sans", "sans-serif"
 }
 h1 {
   margin-bottom: 5px;
-}
-p {
-  line-height: 150%;
 }
 .no-decoration {
   text-decoration: none;
@@ -37,6 +34,10 @@ a:hover{
 }
 .styleless-list li{
   list-style: none;
+}
+
+* {
+  text-size-adjust: none;
 }
 ul li {
   padding: 2px;
@@ -55,20 +56,16 @@ blockquote {
   font-style: italic;
 }
 .wrapper {
-  max-width: 800px;
+  max-width: 768px;
   margin: auto;
   padding: 60px 30px;
-}
-@media screen and (max-width: 720px) {
-  .wrapper {
-    padding: 0.4rem;
-  }
 }
 
 .main-header{
   display:flex;
   justify-content: space-between;
   align-items: center;
+  line-height: 1;
 }
 .main-header a{
   text-decoration: none;
@@ -100,6 +97,7 @@ blockquote {
   margin: 0px;
   margin-left: 1em;
   padding-inline-start: 0px;
+  -webkit-padding-start: 0px;
 }
 .post-list li{
   background-color: #eee;
@@ -138,7 +136,7 @@ blockquote {
 }
 
 .entry-content img, .entry-content video {
-  padding: 1em 2em;
+  padding: 1em 5%;
   display: block;
   margin: auto;
   background-color: #e0e0e0;
@@ -164,4 +162,13 @@ tt {
 
 .allcaps{
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 768px) {
+  .wrapper {
+    padding: 0.4rem;
+  }
+  .post-list{
+    margin-left: 0px;
+  }
 }
